_docs/1.1.8/09-customize-your-app-averos-workflow.md
---
title: "Customize your application"
permalink: /docs/1.1.8/customize-your-app-averos-workflow/
excerpt: "Customize your application - Leveraging Averos Workflow"
toc: true
---

### **III- Leveraging Averos Code Generation Workflow**

We have so far defined the application business requirement as well as the target application design.
Now it is high time we implement all of these aspects and create our application within only seconds! <br>
But how can we achieve such a feat ? <br> 
Well, it turns out that one of the averos generic workflow will actually enable the creation of almost all the use cases in a jiffy.

The averos command dedicated to this type of use case is :

```bash
ng g @wiforge/averos:acrud
```

Running this command will result in the creation of a bunch of components that will interact with each other seamlessly in order to fullfill almost all of the application business requirements listed above including common controls and notification messages for a better user experience.
  
Let's go ahead and execute this command:

```bash
ng g @wiforge/averos:acrud --ename=ToDoArea

ng g @wiforge/averos:acrud --ename=ToDoTask
```

>🚩 Note that **averos-crud** - *alias* **acrud** - workflow will generate all specific CRUD component use cases based on the entity name (--ename).
Refer to the [**detailed averos workflow commands**]({{ "/docs/1.1.8/reference-detailed-averos-worflow-commands/" | relative_url }} "detailed averos workflow commands") section for further details.
{: .notice--info}


As a brief description of the actions performed by this command; averos will create for each requested entity : <br/>
  - **an entity class** type having five extendable default members: 
    - **id**: annotated by the averos @ID() decorator in order to tell the framework that it should handle this field as an identifier
    - **name**: a string member describing the name of the entity
    - **description**: a string member related to the entity description
    - **createdBy**: of type User (**averos User type** by default) related to the user who created the entity
    - **updatedBy**: of type User (**averos User type** by default) related to the user who updated the entity
    - **createdAt**: of type `date` related to the entity creation date
    - **updatedAt**: of type `date` related to the entity update date	

>🚩 These class members are generated by the averos crud creation  workflow and could obviously be updated by other members, modified or deleted at you convenience. Please refer to [**averos entity**]({{ "/docs/1.1.8/reference-averos-entity/" | relative_url }}, "Averos Entity") section for further details.
{: .notice--warning}

 
  - **An entity service** having the default api URL : 
    `http://localhost:3333/api/entityNames` 
    
    `http://localhost:3333/api/(todoareas | todotasks)` in our case). 

    Please refer to the [**averos service**]({{ "/docs/1.1.8/reference-averos-service/" | relative_url }}, "Averos Service") section for further details.
    {: .notice--info}
  
  - **a default menu** showcasing the different autogenerated use cases
  
>🚩 Notice that averos have created as many menu entries as generated use cases; and grouped them by entity.
Those menu links could be easely modified through a simple configuration. Some of the menu configuration items are: <br/>
>-  **icon**: defines the menu icon to display in the menu link/group/submenugroup. Menu icons are specified based on their names as they are defined in the angular material icon specifications 
>- **route**: defines the target use case route
>- **disabled**: wether the menu item should be disabled or not
>- **children**: a list of sub menu items
>More on averos specifications will be available soon in the ongoing averos documentation.
{: .notice--danger}

At the end of the **averos-crud** workflow execution almost all use cases mentioned above will be available and ready for use without any additional line of code.


**🎉🎉🎉 Congratulations! Averos has spared you months of coding and environment useless configurations allowing you to focus on what really matters the most! You are ready to grow your business 🎉🎉🎉**
{: .notice--info}
